# kurve

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  install-immutable.sh  install.sh  package.sh
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: Cava.qml  CompactRepresentation.qml  FullRepresentation.qml  configCava.qml  configGeneral.qml  configVisualizer.qml  main.qml
package/contents/ui/code/: drawCanvas.js  enum.js  globals.js  utils.js
package/contents/ui/components/: FormColors.qml  PactlList.qml  ProcessMonitor.qml  ProcessMonitorFallback.qml  ProcessMonitorPrimary.qml  Visualizer.qml
package/contents/ui/tools/: commandMonitor
package/translate/: ReadMe.md  fr.po  nl.po  ru.po  sv.po  template.pot  zh_CN.po
plugin/: CMakeLists.txt  process.cpp  process.h  processplugin.cpp  qmldir
